--- a/package.json
+++ b/package.json
@@ -5,15 +5,24 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Marcin Matejko",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "config": "^3.3.1",
     "express": "^4.17.1",
     "express-validator": "^6.6.0",
-    "mongoose": "^5.9.26"
+    "moment": "^2.27.0",
+    "mongoose": "^5.9.26",
+    "react-moment": "^0.9.7",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
