--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-validator": "^6.6.0",
     "moment": "^2.27.0",
     "mongoose": "^5.9.26",
+    "react-datepicker": "^3.1.3",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
